# bevyui

./: .gitmodules  Cargo.toml  build.rs
.VSCodeCounter/2024-07-08_21-30-21/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2024-07-11_17-37-05/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
shaders/spv/: imgui_shader.frag.spv  imgui_shader.vert.spv
src/: appliction.rs  main.rs  reflection.rs
src/editor/: display.rs  event.rs  imgui.rs  mod.rs  reflection.rs  structs.rs  t_reflect.rs
src/game/: mod.rs  spawn.rs
