[package]
name = "bevy-ui"
version = "0.1.0"
edition = "2021"


[[bin]]
name = "bevy-ui" 
path = "src/main.rs"

[dependencies]
bevy = {version = "0.14.0"}
ash = "0.38.0"
ash-window = "0.13.0"
winit = { version = "0.29", features = ["rwh_06", "x11"] }
imgui = "0.12.0"
imgui-winit-support = "0.12.0"
voxelengine = {path = "voxelengine"}
voxelengine-proc = {path = "voxelengine-proc"}   
bevy_winit = "0.14.0"
bevy_reflect = "0.14.0"
serde = "1.0.204"
bevy_framepace = "0.17.1"
lazy_static = "1.5.0"
once_cell = "1.19.0"
bevy_rapier2d = "*"
bevy_render = "0.14.1"
raw-window-handle = "0.5"
glam = "0.28.0"
mint = "0.5.9"
